# Ai_engineering_repo

./: .gitignore  README.md  tempCodeRunnerFile.py
ai-engineering/week1/day2/: pyproject.toml
ai-engineering/week1/day3/: token.py
ai_engineering/week1/day3/: pyproject.toml
ai_engineering/week1/day4/: json_pydantic.py  main.py  pyproject.toml
ai_engineering/week2/day6/: prompt_engineering.py  pyproject.toml
ai_engineering/week2/day7/: pyproject.toml  react_chain.py
learningpython/: chapter4.py  chapter6.py  chapter8.py  default_value_function.py  find.py  rock_paper_scissor.py
learningpython/OOP/: class.py  classMethod.py  function_self.py  inheritance.py  propertydeco.py  staticmethod.py
mini_py_projects/: guessthenumbergame.py
mini_py_projects/bank_management_sys/: bank_data.json  bank_data2.json  main.py  setting_up_project.md
mini_py_projects/resume_parser/: README.md  extractor.py  main.py  matcher.py  models.py  parser.py  pyproject.toml  report_generator.py  setting_up_project.md
mini_py_projects/resume_parser/tests/: test_matcher.py
practice_chapters/chapter1/: problem1.py  problem3.py
practice_chapters/chapter5/: problem1.py  problem2.py
practice_chapters/chapter7/: problem3.py  problem4.py
practicechapters/chapter1/: chapter1ps.py  problem4.py
practicechapters/chapter4/: problem1.py  problem2.py  problem3.py  problem4.py
practicechapters/chapter5/: problem3.py
practicechapters/chapter6/: problem1.py  problem2.py  problem3.py
practicechapters/chapter7/: problem1.py  problem2.py  problem5.py
week1/day2/: sys_temp.py
(+31 files in other folders)
