[project]
name = "resume-parser"
version = "0.1.0"
description = "Its a resume-parser project using LLM, Pydantic for structured json output, and semantic key matchings from candidate resume and HR Requirements."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv-python>=0.0.1",
    "google-api-core>=2.25.2",
    "google-genai>=2.11.0",
    "google-generativeai>=0.8.6",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "python-docx>=1.2.0",
    "streamlit>=1.59.2",
]
